src/app/pages/mobile/mobile.component.scss
img {
  position: absolute;
  top: 100px; 
}
.wrapper {
  height: 100vh;
  width: 100vw;
  background: #000;
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  font-family: NEON, -apple-system, Roboto, 'Open Sans', sans-serif;
}

.txt {
  color: #fff;
  background: #000;
  padding: 10px;
  font-size: 18vw;
  font-weight: light;
  text-transform: uppercase;
}
.txt::before {
  content: 'NTUOSS';
  position: absolute;
  mix-blend-mode: difference;
  filter: blur(0.5px);
}
.neon-wrapper {
  display: inline-flex;
  filter: brightness(200%);
  overflow: hidden;
}
.gradient {
  margin: 10px;
  background: linear-gradient(24deg, #46b9c6, #1bb879);
  position: absolute;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  mix-blend-mode: multiply;
  z-index: 1;
}
.dodge {
  background: radial-gradient(circle, #fff, #000 55%) center / 25% 25%;
  position: absolute;
  top: -100%;
  left: -100%;
  right: 0;
  bottom: 0;
  mix-blend-mode: color-dodge;
  animation: dodge-area 8s linear infinite;
}

.welcome-notes {
  color: #fff;
  font-size: 5vw;
}

.register-button {
  margin-top: 30px;
  padding: 10px;
  border-radius: 3px;
  border: 2px solid #46b9c6a9;
  background: transparent;
  color: #46b9c6a9;
}

.footer {
  color: #333;
  position: absolute;
  bottom: 2px;
  right: 5px;
  font-size: 10px;
}
@keyframes dodge-area {
  to {
    transform: translate(50%, 50%);
  }
}

